--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,10 @@ jobs:
       
     - uses: actions/upload-artifact@v3
       with:
-        name: Autorizacion.Abstracciones
+        name: Autorizacion.Middleware
         if-no-files-found: error
         retention-days: 7
-        path: ./AutorizacionMiddleware/Autorizacion.Abstracciones/bin/Release/*.nupkg
+        path: ./nupkgs/*.nupkg
 
   release:
     runs-on: ubuntu-latest    
@@ -49,4 +49,4 @@ jobs:
     - name: Prep packages
       run: dotnet nuget add source --username Chris98310 --password ${{ secrets.Paquetes_Token }} --store-password-in-clear-text --name paquetes "https://nuget.pkg.github.com/Chris98310/index.json"
     - name: Push package to GitHub packages 
-      run: dotnet nuget push ./AutorizacionMiddleware/Autorizacion.Abstracciones/bin/Release/*.nupkg --api-key ${{ secrets.Paquetes_Token }}  --source "paquetes" --skip-duplicate
+      run: dotnet nuget push Autorizacion.Middleware/*/*/*/*.nupkg --api-key ${{ secrets.Paquetes_Token }}  --source "paquetes" --skip-duplicate
