--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
       run: dotnet restore
       working-directory: ./SolucionSeguridad/Autorizacion.Middleware
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore --configuration Release
       working-directory: ./SolucionSeguridad/Autorizacion.Middleware
-    - name: Pack      
-      run: dotnet pack --configuration Release
+    - name: Pack
+      run: dotnet pack --configuration Release --output ./nupkgs
       working-directory: ./SolucionSeguridad/Autorizacion.Middleware
       
     - uses: actions/upload-artifact@v3
@@ -36,17 +36,19 @@ jobs:
   release:
     runs-on: ubuntu-latest    
     needs: build
-    steps:  
+    steps:
     - name: Checkout 
       uses: actions/checkout@v3
     
     - name: Download Artifacts 
       uses: actions/download-artifact@v3
+      with:
+        name: Autorizacion.Middleware
     
     - name: List Files
-      run: ls -R
+      run: ls -R ./nupkgs
       
     - name: Prep packages
-      run: dotnet nuget add source --username Chris98310 --password ${{ secrets.Paquetes_Token }} --store-password-in-clear-text --name paquetes "https://nuget.pkg.github.com/Chris98310/index.json"
+      run: dotnet nuget add source --username Chris98310 --password ${{ secrets.PAQUETES_TOKEN }} --store-password-in-clear-text --name paquetes "https://nuget.pkg.github.com/Chris98310/index.json"
     - name: Push package to GitHub packages 
-      run: dotnet nuget push Autorizacion.Middleware/*/*/*/*.nupkg --api-key ${{ secrets.Paquetes_Token }}  --source "paquetes" --skip-duplicate
+      run: dotnet nuget push ./nupkgs/*.nupkg --api-key ${{ secrets.PAQUETES_TOKEN }} --source "paquetes" --skip-duplicate
