--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,20 +12,27 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+
     - name: Restore dependencies
       run: dotnet restore
       working-directory: ./SolucionSeguridad/Autorizacion.Middleware
+
     - name: Build
       run: dotnet build --no-restore --configuration Release
       working-directory: ./SolucionSeguridad/Autorizacion.Middleware
+
+    - name: Create nupkgs Directory
+      run: mkdir -p ./nupkgs
+
     - name: Pack
       run: dotnet pack --configuration Release --output ./nupkgs
       working-directory: ./SolucionSeguridad/Autorizacion.Middleware
-      
+
     - name: List Packed Files
       run: ls -R ./nupkgs
 
@@ -37,21 +44,22 @@ jobs:
         path: ./nupkgs/*.nupkg
 
   release:
-    runs-on: ubuntu-latest    
+    runs-on: ubuntu-latest
     needs: build
     steps:
     - name: Checkout 
       uses: actions/checkout@v3
-     
+
     - name: Download Artifacts 
       uses: actions/download-artifact@v3
       with:
         name: Autorizacion.Middleware
-    
+
     - name: List Downloaded Files
       run: ls -R ./nupkgs
-      
+
     - name: Prep packages
       run: dotnet nuget add source --username Chris98310 --password ${{ secrets.PAQUETES_TOKEN }} --store-password-in-clear-text --name paquetes "https://nuget.pkg.github.com/Chris98310/index.json"
+
     - name: Push package to GitHub packages 
       run: dotnet nuget push ./nupkgs/*.nupkg --api-key ${{ secrets.PAQUETES_TOKEN }} --source "paquetes" --skip-duplicate
