--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,14 +23,11 @@ jobs:
       working-directory: ./SolucionSeguridad/Autorizacion.Middleware
 
     - name: Build
-      run: dotnet build --no-restore --configuration Release
+      run: dotnet build --no-restore --configuration Debug
       working-directory: ./SolucionSeguridad/Autorizacion.Middleware
 
-    - name: Create nupkgs Directory
-      run: mkdir -p ./nupkgs
-
     - name: Pack
-      run: dotnet pack --configuration Release --output ./nupkgs
+      run: dotnet pack --configuration Debug --output ./nupkgs
       working-directory: ./SolucionSeguridad/Autorizacion.Middleware
 
     - name: List Files in nupkgs
@@ -47,21 +44,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - name: Checkout 
+    - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Download Artifacts 
+    - name: Download Artifacts
       uses: actions/download-artifact@v3
-      with:
-        name: Autorizacion.Middleware
 
-    - name: List Downloaded Files
-      run: ls -R ./nupkgs
+    - name: List Files
+      run: ls -R
 
     - name: Prep packages
-      run: dotnet nuget add source --username Chris98310 --password ${{ secrets.PAQUETES_TOKEN }} --store-password-in-clear-text --name paquetes "https://nuget.pkg.github.com/Chris98310/index.json"
+      run: dotnet nuget add source --username Chris98310 --password ${{ secrets.Paquetes_Token }} --store-password-in-clear-text --name paquetes "https://nuget.pkg.github.com/Chris98310/index.json"
 
-    - name: Push package to GitHub packages 
-      run: dotnet nuget push ./nupkgs/*.nupkg --api-key ${{ secrets.PAQUETES_TOKEN }} --source "paquetes" --skip-duplicate
-    - name: Push package to GitHub packages 
-      run: dotnet nuget push ./nupkgs/*.nupkg --api-key ${{ secrets.PAQUETES_TOKEN }} --source "paquetes" --skip-duplicate
+    - name: Push package to GitHub packages
+      run: dotnet nuget push ./nupkgs/*.nupkg --api-key ${{ secrets.Paquetes_Token }} --source "paquetes" --skip-duplicate
