--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,11 @@ jobs:
       run: dotnet build --no-restore --configuration Debug
       working-directory: ./SolucionSeguridad/Autorizacion.Middleware
 
+    - name: Create nupkgs Directory
+      run: mkdir -p ./nupkgs
+
     - name: Pack
-      run: |
-        mkdir -p ./nupkgs
-        dotnet pack --configuration Debug --output ./nupkgs
+      run: dotnet pack --configuration Debug --output ./nupkgs
       working-directory: ./SolucionSeguridad/Autorizacion.Middleware
 
     - name: List Files in nupkgs
