--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,56 +8,47 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
-
     - name: Restore dependencies
       run: dotnet restore
       working-directory: ./SolucionSeguridad/Autorizacion.Middleware
-
     - name: Build
-      run: dotnet build --no-restore --configuration Debug
+      run: dotnet build --no-restore
       working-directory: ./SolucionSeguridad/Autorizacion.Middleware
-
-    - name: Create nupkgs Directory
-      run: mkdir -p ./nupkgs
-
-    - name: Pack
-      run: dotnet pack --configuration Debug --output ./nupkgs
+    - name: Pack      
+      run: dotnet pack
       working-directory: ./SolucionSeguridad/Autorizacion.Middleware
-
-    - name: List Files in nupkgs
-      run: ls -R ./nupkgs
-
+      
     - uses: actions/upload-artifact@v3
       with:
         name: Autorizacion.Middleware
         if-no-files-found: error
         retention-days: 7
-        path: ./nupkgs/*.nupkg
+        path: /home/runner/work/SolucionSeguridad/AutorizacionMiddleware/*/*/*/*.nupkg
 
   release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest    
     needs: build
-    steps:
-    - name: Checkout
+    steps:  
+    - name: Checkout 
       uses: actions/checkout@v3
-
-    - name: Download Artifacts
+    
+    - name: Downlod Artifacts 
       uses: actions/download-artifact@v3
-
+    
     - name: List Files
       run: ls -R
-
+      
     - name: Prep packages
       run: dotnet nuget add source --username Chris98310 --password ${{ secrets.PAQUETES_TOKEN }} --store-password-in-clear-text --name paquetes "https://nuget.pkg.github.com/Chris98310/index.json"
-
-    - name: Push package to GitHub packages
-      run: dotnet nuget push ./nupkgs/*.nupkg --api-key ${{ secrets.PAQUETES_TOKEN }} --source "paquetes" --skip-duplicate
+    - name: Push package to GitHub packages 
+      run: dotnet nuget push Autorizacion.Middleware/*/*/*/*.nupkg --api-key ${{ secrets.PAQUETES_TOKEN }}  --source "paquetes" --skip-duplicate
+    
